Main Menu Set up
Main Menu level is setup with buttons that when clicked either start the game or quit

--- a/FinalVRProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/FinalVRProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -79,7 +79,7 @@ LastExecutedPlayModeType=PlayMode_InVR
 MultipleInstancePositions=(X=320,Y=160)
 
 [EditorStartup]
-LastLevel=/Game/VRTemplate/Maps/VRTemplateMap
+LastLevel=/Game/VRTemplate/Maps/MainMenuMap
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1058,11 +1058,53 @@ WidgetInteractionComponent.Activation=True
 WidgetInteractionComponent.Cooking=True
 WidgetInteractionComponent.Events=True
 K2Node_InputAction.Input=True
+VRPawn_C.TransformCommon=True
+VRTeleportVisualizer_C.TransformCommon=True
+VRTeleportVisualizer_C.Rendering=True
+VRTeleportVisualizer_C.Replication=True
+VRTeleportVisualizer_C.Collision=True
+VRTeleportVisualizer_C.Input=True
+VRTeleportVisualizer_C.Actor=True
+NavModifierVolume.TransformCommon=True
+NavModifierVolume.Default=True
+NavModifierVolume.Collision=True
+NavModifierVolume.Navigation=True
+NavModifierVolume.Tags=True
+NavModifierVolume.Cooking=True
+NavModifierVolume.BrushSettings=True
+NavModifierVolume.Replication=True
+NavModifierVolume.Actor=True
+RecastNavMesh.TransformCommon=True
+VRSpectator_C.TransformCommon=True
+VRSpectator_C.Default=True
+VRSpectator_C.Camera Settings=True
+VRSpectator_C.Replication=True
+VRSpectator_C.Rendering=True
+VRSpectator_C.Collision=True
+VRSpectator_C.Input=True
+VRSpectator_C.CameraSettings=True
+VRSpectator_C.Actor=True
+TextRenderActor.TransformCommon=True
+TextRenderActor.Materials=True
+TextRenderActor.Text=True
+TextRenderActor.Lighting=True
+TextRenderActor.Navigation=True
+TextRenderActor.Tags=True
+TextRenderActor.Rendering=True
+TextRenderActor.Cooking=True
+TextRenderActor.Replication=True
+TextRenderActor.Input=True
+TextRenderActor.Actor=True
+MainMenu_C.Tick=True
+MainMenu_C.Replication=True
+MainMenu_C.Rendering=True
+MainMenu_C.Collision=True
+MainMenu_C.Actor=True
+MainMenu_C.Input=True
+MainMenu_C.TransformCommon=True
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/VRTemplate/Blueprints/VRPawn.VRPawn
-OpenAssetsAtExit=/Game/VRTemplate/Blueprints/FinalActor.FinalActor
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -1114,8 +1156,10 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=0,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=1,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,SingleLayerWaterRefractionFullPrecision=0",GameShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=0,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,SingleLayerWaterRefractionFullPrecision=0",BufferVisualizationMode="",RayTracingDebugVisualizationMode="",ExposureSettings=(FixedEV100=1.000000,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowOnScreenStats=True,EnabledStats=,bShowFullToolbar=True))
 
 [MRU]
-MRUItem0=/Game/VRTemplate/Maps/VRTemplateMap
-MRUItem1=/Game/VRTemplate/Maps/MainMenuLevel
+MRUItem0=/Game/VRTemplate/Maps/MainMenuMap
+MRUItem1=/Game/VRTemplate/Maps/VRTemplateMap
+MRUItem2=/Game/VRTemplate/Maps/MainMenuLevel
+MRUItem3=/Game/VRTemplate/Maps/MainMenu
 
 [PluginBrowser]
 InstalledPlugins=LPSPSample
@@ -1123,7 +1167,7 @@ InstalledPlugins=XRVisualization
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=149.600
-ScreenPosition=X=320.000 Y=148.000
+ScreenPosition=X=-9.000 Y=0.000
 WindowSize=X=1284.800 Y=724.800
 WindowSize=X=1298.000 Y=738.000
 None=======
@@ -1154,7 +1198,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/VRTemplate/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/VRTemplate/Widgets
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -2264,29 +2308,29 @@ bConvertSceneUnit=False
 None=======
 
 [MessageLog]
-LastLogListing=FBXImport
+LastLogListing=MapCheck
 
 [ContentBrowserRecent]
-MRUItem0=/Game/VRTemplate/Blueprints/FinalActor
-MRUItem1=/Game/VRTemplate/Blueprints/VRPawn
-MRUItem2=/Game/VRTemplate/Blueprints/Projectile
-MRUItem3=/Game/VRTemplate/Blueprints/target
-MRUItem4=/Game/VRTemplate/Blueprints/Timer
-MRUItem5=/Game/VRTemplate/Blueprints/Launcher
-MRUItem6=/Game/VRTemplate/Blueprints/Baseball
-MRUItem7=/Game/VRTemplate/Widgets/TimerDisplay
-MRUItem8=/Game/VRTemplate/Blueprints/TimerActor
-MRUItem9=/Game/VRTemplate/Blueprints/VRGameMode
-MRUItem10=/Game/VRTemplate/Widgets/FinalWidget
-MRUItem11=/Game/VRTemplate/Widgets/NewWidgetBlueprint
-MRUItem12=/Game/VRTemplate/Widgets/Scoreboard
-MRUItem13=/Game/VRTemplate/Blueprints/Pistol
-MRUItem14=/Game/VRTemplate/Blueprints/TimerDisplay
-MRUItem15=/Game/VRTemplate/Blueprints/Scoreboardactor
-MRUItem16=/Game/VRTemplate/Blueprints/Scoreboard
-MRUItem17=/Game/VRTemplate/Audio/Music
-MRUItem18=/Game/VRTemplate/Audio/TakeMeOuttotheballgame
-MRUItem19=/Game/VRTemplate/Audio/Fire_Cue
+MRUItem0=/Game/VRTemplate/Widgets/FinalWidget
+MRUItem1=/Game/VRTemplate/Widgets/MainMenuWidget
+MRUItem2=/Game/VRTemplate/Blueprints/MainMenu
+MRUItem3=/Game/VRTemplate/Maps/MainMenuMap
+MRUItem4=/Game/VRTemplate/Maps/VRTemplateMap
+MRUItem5=/Game/VRTemplate/Maps/MainMenuLevel
+MRUItem6=/Game/VRTemplate/Maps/MainMenu
+MRUItem7=/Game/VRTemplate/Blueprints/FinalActor
+MRUItem8=/Game/VRTemplate/Blueprints/VRPawn
+MRUItem9=/Game/VRTemplate/Blueprints/Projectile
+MRUItem10=/Game/VRTemplate/Blueprints/target
+MRUItem11=/Game/VRTemplate/Blueprints/Timer
+MRUItem12=/Game/VRTemplate/Blueprints/Launcher
+MRUItem13=/Game/VRTemplate/Blueprints/Baseball
+MRUItem14=/Game/VRTemplate/Widgets/TimerDisplay
+MRUItem15=/Game/VRTemplate/Blueprints/TimerActor
+MRUItem16=/Game/VRTemplate/Blueprints/VRGameMode
+MRUItem17=/Game/VRTemplate/Widgets/NewWidgetBlueprint
+MRUItem18=/Game/VRTemplate/Widgets/Scoreboard
+MRUItem19=/Game/VRTemplate/Blueprints/Pistol
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
@@ -2311,8 +2355,14 @@ MeshComponent=
 PrimitiveComponent=
 SceneComponent=
 ActorComponent=
+NavModifierVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/VRTemplate/Blueprints/MainMenu.MainMenu;
+RecentlyPlaced=/Game/Geometry/Meshes/1M_Cube.1M_Cube;
+RecentlyPlaced=/Game/VRSpectator/VRSpectator.VRSpectator;
+RecentlyPlaced=/Game/VRTemplate/Blueprints/VRTeleportVisualizer.VRTeleportVisualizer;
+RecentlyPlaced=/Game/VRTemplate/Blueprints/VRPawn.VRPawn;
 RecentlyPlaced=/Game/VRTemplate/Blueprints/FinalActor.FinalActor;
 RecentlyPlaced=/Game/VRTemplate/Blueprints/Baseball_Field_Bases.Baseball_Field_Bases;
 RecentlyPlaced=/Game/VRTemplate/Blueprints/Baseball_Field_Field.Baseball_Field_Field;
@@ -2328,10 +2378,6 @@ RecentlyPlaced=/Game/VRTemplate/Blueprints/Baseball.Baseball;
 RecentlyPlaced=/Game/VRTemplate/Blueprints/BaseballBat.BaseballBat;
 RecentlyPlaced=/Game/VRTemplate/Blueprints/Grabbable_SmallCube_2.Grabbable_SmallCube_2;
 RecentlyPlaced=/sketchfa/baseball/baseball.baseball;
-RecentlyPlaced=/Game/VRTemplate/Blueprints/Grabbable_SmallCube_3.Grabbable_SmallCube_3;
-RecentlyPlaced=/Game/Meshes/StaticMesh.StaticMesh;
-RecentlyPlaced=/Game/VRTemplate/Textures/download.download;
-RecentlyPlaced=/Game/VRTemplate/Blueprints/Baseball_bat_LP.Baseball_bat_LP;
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="SkeletalMeshEditor",Commands=)
@@ -2370,6 +2416,8 @@ MRUItem1=/Game/VRTemplate/Blueprints/Grabbable_SmallCube
 /Game/VRTemplate/Widgets/FinalWidget.FinalWidget=1
 /Game/VRTemplate/Widgets/Scoreboard.Scoreboard=1
 /Game/VRTemplate/Widgets/NewWidgetBlueprint.NewWidgetBlueprint=1
+/Game/VRTemplate/Widgets/MainMenuWidget.MainMenuWidget=1
+/Game/VRTemplate/Blueprints/MainMenu.MainMenu=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2562,7 +2610,7 @@ MovieRendererName=
 
 [DetailCustomWidgetExpansion]
 StaticMeshComponent=
-SceneComponent=StaticMeshComponent.Collision.Collision,
+SceneComponent=
 Baseball_C=StaticMeshComponent.Collision.Collision,
 target_C=StaticMeshComponent.Collision.Collision,
 TimerActor_C=StaticMeshComponent.Collision.Collision,
@@ -2574,7 +2622,7 @@ K2Node_VariableGet=StaticMeshComponent.Collision.Collision,K2Node_FunctionEntry.
 K2Node_VariableSet=StaticMeshComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.InputArgument0,
 VRTemplateMap_C=StaticMeshComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.InputArgument0,
 Pistol_C=StaticMeshComponent.Collision.Collision,
-Launcher_C=
+Launcher_C=StaticMeshComponent.Collision.Collision,
 Grabbable_SmallCube_C=StaticMeshComponent.Collision.Collision,
 FinalWidget_C=
 FinalActor_C=StaticMeshComponent.Collision.Collision,
@@ -2583,4 +2631,6 @@ BillboardComponent=StaticMeshComponent.Collision.Collision,
 BaseballBat_C=StaticMeshComponent.Collision.Collision,
 VRPawn_C=
 WidgetComponent=WidgetComponent.Collision.Collision,
+MainMenuWidget_C=
+SkeletalMeshComponent=
 
