--- a/FinalVRProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/FinalVRProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1117,8 +1117,8 @@ LightmassImportanceVolume.Actor=True
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/VRTemplate/Widgets/TimerDisplay.TimerDisplay
-OpenAssetsAtExit=/Game/VRTemplate/Widgets/Scoreboard.Scoreboard
+OpenAssetsAtExit=/Game/VRTemplate/Blueprints/TimerActor.TimerActor
+OpenAssetsAtExit=/Game/VRTemplate/Blueprints/Scoreboardactor.Scoreboardactor
 OpenAssetsAtExit=/Game/VRTemplate/Widgets/FinalWidget.FinalWidget
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
@@ -2210,6 +2210,7 @@ FbxImportUI.Material=True
 PreviewMaterial.Material=True
 StaticMeshComponent.Collision=True
 WidgetComponent.Collision=True
+WidgetComponent.Rendering=True
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -2326,32 +2327,32 @@ None=======
 LastLogListing=MapCheck
 
 [ContentBrowserRecent]
-MRUItem0=/Game/VRTemplate/Widgets/TimerDisplay
-MRUItem1=/Game/VRTemplate/Widgets/Scoreboard
-MRUItem2=/Game/VRTemplate/Widgets/FinalWidget
+MRUItem0=/Game/VRTemplate/Widgets/FinalWidget
+MRUItem1=/Game/VRTemplate/Blueprints/Scoreboardactor
+MRUItem2=/Game/VRTemplate/Blueprints/TimerActor
 MRUItem3=/Game/VRTemplate/Blueprints/FinalActor
-MRUItem4=/Game/VRTemplate/Blueprints/Launcher
-MRUItem5=/Game/VRTemplate/Widgets/MainMenuWidget
-MRUItem6=/Game/VRTemplate/Blueprints/MainMenu
-MRUItem7=/Game/VRTemplate/Maps/MainMenuMap
-MRUItem8=/Game/VRTemplate/Maps/VRTemplateMap
-MRUItem9=/Game/VRTemplate/Maps/MainMenuLevel
-MRUItem10=/Game/VRTemplate/Maps/MainMenu
-MRUItem11=/Game/VRTemplate/Blueprints/VRPawn
-MRUItem12=/Game/VRTemplate/Blueprints/Projectile
-MRUItem13=/Game/VRTemplate/Blueprints/target
-MRUItem14=/Game/VRTemplate/Blueprints/Timer
-MRUItem15=/Game/VRTemplate/Blueprints/Baseball
-MRUItem16=/Game/VRTemplate/Blueprints/TimerActor
-MRUItem17=/Game/VRTemplate/Blueprints/VRGameMode
-MRUItem18=/Game/VRTemplate/Widgets/NewWidgetBlueprint
-MRUItem19=/Game/VRTemplate/Blueprints/Pistol
+MRUItem4=/Game/VRTemplate/Widgets/TimerDisplay
+MRUItem5=/Game/VRTemplate/Widgets/Scoreboard
+MRUItem6=/Game/VRTemplate/Blueprints/Launcher
+MRUItem7=/Game/VRTemplate/Widgets/MainMenuWidget
+MRUItem8=/Game/VRTemplate/Blueprints/MainMenu
+MRUItem9=/Game/VRTemplate/Maps/MainMenuMap
+MRUItem10=/Game/VRTemplate/Maps/VRTemplateMap
+MRUItem11=/Game/VRTemplate/Maps/MainMenuLevel
+MRUItem12=/Game/VRTemplate/Maps/MainMenu
+MRUItem13=/Game/VRTemplate/Blueprints/VRPawn
+MRUItem14=/Game/VRTemplate/Blueprints/Projectile
+MRUItem15=/Game/VRTemplate/Blueprints/target
+MRUItem16=/Game/VRTemplate/Blueprints/Timer
+MRUItem17=/Game/VRTemplate/Blueprints/Baseball
+MRUItem18=/Game/VRTemplate/Blueprints/VRGameMode
+MRUItem19=/Game/VRTemplate/Widgets/NewWidgetBlueprint
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" "
 Object=
-Object="\"Object.Appearance.Font\" "
+Object=
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -2361,10 +2362,10 @@ AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 StaticMesh=
 StreamableRenderAsset=
 SkeletalMesh="\"Object.SkeletalMesh.Materials.Materials[1]\" "
-TextBlock="\"Object.Appearance.Font\" "
-TextLayoutWidget="\"Object.Appearance.Font\" "
-Widget="\"Object.Appearance.Font\" "
-Visual="\"Object.Appearance.Font\" "
+TextBlock="\"Object.Appearance.Font\" \"Object.Layout.Slot.Object.Layout.Layout|Button Slot.Padding\" "
+TextLayoutWidget="\"Object.Appearance.Font\" \"Object.Layout.Slot.Object.Layout.Layout|Button Slot.Padding\" "
+Widget=
+Visual=
 StaticMeshComponent=
 MeshComponent=
 PrimitiveComponent=
@@ -2642,7 +2643,7 @@ VRTemplateMap_C=StaticMeshComponent.Collision.Collision,K2Node_FunctionEntry.Inp
 Pistol_C=StaticMeshComponent.Collision.Collision,
 Launcher_C=StaticMeshComponent.Collision.Collision,
 Grabbable_SmallCube_C=StaticMeshComponent.Collision.Collision,
-FinalWidget_C=StaticMeshComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.InputArgument0,
+FinalWidget_C=
 FinalActor_C=StaticMeshComponent.Collision.Collision,
 VRGameMode_C=K2Node_FunctionEntry.Inputs.InputArgument0,
 BillboardComponent=StaticMeshComponent.Collision.Collision,
@@ -2653,4 +2654,5 @@ MainMenuWidget_C=
 SkeletalMeshComponent=
 Scoreboardactor_C=StaticMeshComponent.Collision.Collision,
 Scoreboard_C=StaticMeshComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.InputArgument0,
+BP_Sky_Sphere_C=StaticMeshComponent.Collision.Collision,
 
