--- a/FinalVRProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/FinalVRProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -69,13 +69,13 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=1280,Y=720)
+LastSize=(X=0,Y=0)
 LastExecutedLaunchDevice=WindowsNoEditor@LAPTOP-65TG6N9J
 LastExecutedLaunchName=LAPTOP-65TG6N9J
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
-LastExecutedPlayModeType=PlayMode_InVR
+LastExecutedPlayModeType=PlayMode_Simulate
 MultipleInstancePositions=(X=320,Y=160)
 
 [EditorStartup]
@@ -1114,12 +1114,41 @@ LightmassImportanceVolume.TransformCommon=True
 LightmassImportanceVolume.Replication=True
 LightmassImportanceVolume.BrushSettings=True
 LightmassImportanceVolume.Actor=True
+DirectionalLight.TransformCommon=True
+DirectionalLight.Light=True
+DirectionalLight.Rendering=True
+DirectionalLight.Lightmass=True
+DirectionalLight.LightShafts=True
+DirectionalLight.CascadedShadowMaps=True
+DirectionalLight.DistanceFieldShadows=True
+DirectionalLight.RayTracing=True
+DirectionalLight.AtmosphereAndCloud=True
+DirectionalLight.Performance=True
+DirectionalLight.LightFunction=True
+DirectionalLight.Tags=True
+DirectionalLight.Cooking=True
+DirectionalLight.Actor=True
+SkyLight.TransformCommon=True
+SkyLight.Light=True
+SkyLight.Rendering=True
+SkyLight.DistanceFieldAmbientOcclusion=True
+SkyLight.AtmosphereAndCloud=True
+SkyLight.RayTracing=True
+SkyLight.SkyLight=True
+SkyLight.Tags=True
+SkyLight.Cooking=True
+SkyLight.Actor=True
+SphereReflectionCapture.TransformCommon=True
+SphereReflectionCapture.ReflectionCapture=True
+SphereReflectionCapture.ReflectionCaptureMobile=True
+SphereReflectionCapture.Rendering=True
+SphereReflectionCapture.Tags=True
+SphereReflectionCapture.Cooking=True
+SphereReflectionCapture.Replication=True
+SphereReflectionCapture.Input=True
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/VRTemplate/Blueprints/TimerActor.TimerActor
-OpenAssetsAtExit=/Game/VRTemplate/Blueprints/Scoreboardactor.Scoreboardactor
-OpenAssetsAtExit=/Game/VRTemplate/Widgets/FinalWidget.FinalWidget
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -1213,7 +1242,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/VRTemplate/Widgets
+ContentBrowserTab1.SelectedPaths=/Game/Geometry/Meshes
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -2327,40 +2356,40 @@ None=======
 LastLogListing=MapCheck
 
 [ContentBrowserRecent]
-MRUItem0=/Game/VRTemplate/Widgets/FinalWidget
-MRUItem1=/Game/VRTemplate/Blueprints/Scoreboardactor
-MRUItem2=/Game/VRTemplate/Blueprints/TimerActor
-MRUItem3=/Game/VRTemplate/Blueprints/FinalActor
-MRUItem4=/Game/VRTemplate/Widgets/TimerDisplay
-MRUItem5=/Game/VRTemplate/Widgets/Scoreboard
-MRUItem6=/Game/VRTemplate/Blueprints/Launcher
-MRUItem7=/Game/VRTemplate/Widgets/MainMenuWidget
-MRUItem8=/Game/VRTemplate/Blueprints/MainMenu
-MRUItem9=/Game/VRTemplate/Maps/MainMenuMap
-MRUItem10=/Game/VRTemplate/Maps/VRTemplateMap
-MRUItem11=/Game/VRTemplate/Maps/MainMenuLevel
-MRUItem12=/Game/VRTemplate/Maps/MainMenu
-MRUItem13=/Game/VRTemplate/Blueprints/VRPawn
-MRUItem14=/Game/VRTemplate/Blueprints/Projectile
-MRUItem15=/Game/VRTemplate/Blueprints/target
-MRUItem16=/Game/VRTemplate/Blueprints/Timer
-MRUItem17=/Game/VRTemplate/Blueprints/Baseball
-MRUItem18=/Game/VRTemplate/Blueprints/VRGameMode
-MRUItem19=/Game/VRTemplate/Widgets/NewWidgetBlueprint
+MRUItem0=/Game/VRTemplate/Blueprints/Baseball_Field_Field
+MRUItem1=/Game/VRTemplate/Blueprints/Baseball_Field_Bases
+MRUItem2=/Game/VRTemplate/Widgets/FinalWidget
+MRUItem3=/Game/VRTemplate/Blueprints/Scoreboardactor
+MRUItem4=/Game/VRTemplate/Blueprints/TimerActor
+MRUItem5=/Game/VRTemplate/Blueprints/FinalActor
+MRUItem6=/Game/VRTemplate/Widgets/TimerDisplay
+MRUItem7=/Game/VRTemplate/Widgets/Scoreboard
+MRUItem8=/Game/VRTemplate/Blueprints/Launcher
+MRUItem9=/Game/VRTemplate/Widgets/MainMenuWidget
+MRUItem10=/Game/VRTemplate/Blueprints/MainMenu
+MRUItem11=/Game/VRTemplate/Maps/MainMenuMap
+MRUItem12=/Game/VRTemplate/Maps/VRTemplateMap
+MRUItem13=/Game/VRTemplate/Maps/MainMenuLevel
+MRUItem14=/Game/VRTemplate/Maps/MainMenu
+MRUItem15=/Game/VRTemplate/Blueprints/VRPawn
+MRUItem16=/Game/VRTemplate/Blueprints/Projectile
+MRUItem17=/Game/VRTemplate/Blueprints/target
+MRUItem18=/Game/VRTemplate/Blueprints/Timer
+MRUItem19=/Game/VRTemplate/Blueprints/Baseball
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" "
 Object=
-Object=
+Object="\"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
-StaticMesh=
-StreamableRenderAsset=
+StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" "
+StreamableRenderAsset="\"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" "
 SkeletalMesh="\"Object.SkeletalMesh.Materials.Materials[1]\" "
 TextBlock="\"Object.Appearance.Font\" \"Object.Layout.Slot.Object.Layout.Layout|Button Slot.Padding\" "
 TextLayoutWidget="\"Object.Appearance.Font\" \"Object.Layout.Slot.Object.Layout.Layout|Button Slot.Padding\" "
@@ -2375,8 +2404,8 @@ NavModifierVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 LightmassImportanceVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 [PlacementMode]
-RecentlyPlaced=/Game/VRTemplate/Blueprints/MainMenu.MainMenu;
 RecentlyPlaced=/Game/Geometry/Meshes/1M_Cube.1M_Cube;
+RecentlyPlaced=/Game/VRTemplate/Blueprints/MainMenu.MainMenu;
 RecentlyPlaced=/Game/VRSpectator/VRSpectator.VRSpectator;
 RecentlyPlaced=/Game/VRTemplate/Blueprints/VRTeleportVisualizer.VRTeleportVisualizer;
 RecentlyPlaced=/Game/VRTemplate/Blueprints/VRPawn.VRPawn;
@@ -2437,6 +2466,8 @@ MRUItem1=/Game/VRTemplate/Blueprints/Grabbable_SmallCube
 /Game/VRTemplate/Blueprints/MainMenu.MainMenu=1
 /Game/VRTemplate/Blueprints/Launcher.Launcher=1
 /Game/VRTemplate/Blueprints/FinalActor.FinalActor=1
+/Game/VRTemplate/Blueprints/Baseball_Field_Bases.Baseball_Field_Bases=1
+/Game/VRTemplate/Blueprints/Baseball_Field_Field.Baseball_Field_Field=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2629,11 +2660,11 @@ MovieRendererName=
 
 [DetailCustomWidgetExpansion]
 StaticMeshComponent=
-SceneComponent=
+SceneComponent=StaticMeshComponent.Collision.Collision,
 Baseball_C=StaticMeshComponent.Collision.Collision,
 target_C=StaticMeshComponent.Collision.Collision,
 TimerActor_C=StaticMeshComponent.Collision.Collision,
-Timer_C=
+Timer_C=StaticMeshComponent.Collision.Collision,
 PropertyWrapper=StaticMeshComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.InputArgument0,
 TimerDisplay_C=
 K2Node_FunctionEntry=K2Node_FunctionEntry.Inputs.InputArgument0,
@@ -2655,4 +2686,8 @@ SkeletalMeshComponent=
 Scoreboardactor_C=StaticMeshComponent.Collision.Collision,
 Scoreboard_C=StaticMeshComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.InputArgument0,
 BP_Sky_Sphere_C=StaticMeshComponent.Collision.Collision,
+BrushComponent=
+VRSpectator_C=StaticMeshComponent.Collision.Collision,
+RecastNavMesh=StaticMeshComponent.Collision.Collision,
+NavModifierVolume=StaticMeshComponent.Collision.Collision,
 
